feat: add Bobo world image flow